fixed a css link and too long title in sidebar

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -152,11 +152,17 @@ $icons: ("1": "#6bce6b",
     cursor: pointer;
 }
 
+.navbar.fixed-left {
+    .group-title a {
+        max-width: 75%;
+        text-overflow: ellipsis;
+        overflow: hidden;
+    }
+}
 
 //We should use bootstrap var instead
 @media (max-width: 768px) { 
     .smartmd .smartmd__toolbar {
         overflow-x: scroll;
     }
-
 }
